--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <img src="images/logo.png"></img>
     </figure>
     <ul>
-      <li class="page-link">Home</li>
-      <li class="page-link">About</li>
-      <li class="page-link">Contact</li>
+      <li class="page-link"><a>Home</a></li>
+      <li class="page-link"><a>About</a></li>
+      <li class="page-link"><a>Contact</a></li>
     </ul>
   </div>
   <section class="header">
