--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <section class="section-contact" id="contact">
     <h2 class="section-title contact-title"> Contact</h2>
     <div class="contact">
-      <div class="formulaire">
+      <form class="formulaire">
         <h3>Formulaire de contact</h3>
 
         <label for="name">Nom</label>
@@ -143,7 +143,10 @@
         <input type="text" id="phone">
         <label for="message">Message</label>
         <textarea name="" id="message" cols="30" rows="10"></textarea>
-      </div>
+        <div class="btn-div btn-contact">
+          <button>voir plus</button>
+        </div>
+      </form>
       <div class="coordonnee">
         <h3>Nos Coordonnées</h3>
         <p>
